@@ -463,6 +463,8 @@ Other memory:
 	* Improved sharebility of stdout among pthreads (only).  Nothing
 	  was broken, but by moving the mutual exclusion logic to a
 	  higher level, the printf output is more readable.
+	* Fixed a bug in file system cleanup:  A list was being deleted
+	  before the buffers contained in the list.
 	* Started m68322
 </pre></ul>
 
